--- a/index.html
+++ b/index.html
@@ -399,6 +399,133 @@ body{
   }
 }
 
+
+/* ==== Mobile UX: verrouillage horizontal (pan-y only) ==== */
+@media (max-width: 820px){
+  html, body {
+    overflow-x: hidden !important;
+    max-width: 100%;
+    touch-action: pan-y;
+    overscroll-behavior-x: none;
+  }
+  .container, .header, .hero, .grid {
+    overflow-x: hidden;
+    max-width: 100%;
+  }
+  /* Empêche des largeurs abusives par erreur */
+  img, video, canvas, svg { max-width: 100%; }
+}
+
+
+/* ==== Mes informations: look & feel premium, mobile-first ==== */
+#client .sheet{
+  border: 1px solid #0001;
+  box-shadow: 0 22px 60px rgba(0,0,0,.35);
+  background:
+    radial-gradient(1200px 400px at -10% -20%, rgba(244,205,183,.35), transparent 60%),
+    radial-gradient(900px 300px at 120% 120%, rgba(212,122,44,.15), transparent 60%),
+    #ffffff;
+}
+
+/* Header stylé avec police africaine */
+#client .sheet header b{
+  font-family: "Kenia", Poppins, sans-serif;
+  font-size: 26px;
+  letter-spacing: .5px;
+  color: var(--brand-700);
+}
+
+/* Corps: carte douce et respirante */
+#client .sheet .body{
+  background: #fff7f1;
+  border-radius: 14px;
+  margin: 14px;
+  padding: 16px;
+  box-shadow: inset 0 0 0 1px #00000008;
+}
+
+/* Labels plus nets et contrastés */
+#client .field label{
+  color: #2b1e12;
+  font-weight: 800;
+  font-size: 13px;
+  letter-spacing: .2px;
+}
+
+/* Inputs avec icônes intégrées et focus visible */
+#client .input, #client select, #client textarea{
+  border: 1px solid var(--brand);
+  background-color: #fff;
+  border-radius: 12px;
+  padding: 12px 14px 12px 42px; /* place pour l'icône */
+  font-weight: 600;
+  transition: border .2s, box-shadow .2s, background .2s;
+}
+#client .input:focus, #client select:focus, #client textarea:focus{
+  border-color: var(--brand-700);
+  box-shadow: 0 0 0 3px rgba(212,122,44,.22);
+  background: #fffefd;
+}
+
+/* Icône : Nom */
+#cName{
+  background-image: url("data:image/svg+xml;utf8,\
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>\
+<circle cx='12' cy='8' r='4' fill='none' stroke='%239e5317' stroke-width='2' />\
+<path d='M4 20c0-4 4-6 8-6s8 2 8 6' fill='none' stroke='%239e5317' stroke-width='2' />\
+</svg>");
+  background-repeat:no-repeat; background-size:18px 18px; background-position:12px 50%;
+}
+
+/* Icône : Téléphone */
+#cPhone{
+  background-image: url("data:image/svg+xml;utf8,\
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>\
+<path d='M22 16.92v2a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6A19.8 19.8 0 0 1 2.1 5.18 2 2 0 0 1 4.1 3h2a2 2 0 0 1 2 1.72c.12.9.33 1.77.63 2.61a2 2 0 0 1-.45 2.11L7.1 10.9a16 16 0 0 0 6 6l1.46-1.18a2 2 0 0 1 2.11-.45c.84.3 1.71.51 2.61.63A2 2 0 0 1 22 16.92z' fill='none' stroke='%239e5317' stroke-width='2'/>\
+</svg>");
+  background-repeat:no-repeat; background-size:18px 18px; background-position:12px 50%;
+}
+
+/* Icône : Adresse */
+#cAddr{
+  background-image: url("data:image/svg+xml;utf8,\
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>\
+<path d='M12 21s-6-5.33-6-10a6 6 0 1 1 12 0c0 4.67-6 10-6 10z' fill='none' stroke='%239e5317' stroke-width='2'/>\
+<circle cx='12' cy='11' r='2' fill='none' stroke='%239e5317' stroke-width='2'/>\
+</svg>");
+  background-repeat:no-repeat; background-size:18px 18px; background-position:12px 14px;
+  padding-left: 42px;
+}
+
+/* Option: case mémoriser plus intégrée */
+#client #cRemember{ accent-color: var(--brand-700); }
+
+/* Bouton principal large et arrondi sur mobile */
+#client .sheet .body .btn{
+  width:100%;
+  justify-content:center;
+  border-radius: 14px;
+  padding: 14px 18px;
+  font-size: 16px;
+  background: linear-gradient(135deg,var(--brand),var(--brand-700));
+  box-shadow: 0 12px 22px rgba(0,0,0,.18);
+}
+#client .sheet .body .btn:hover{
+  transform: translateY(-1px);
+}
+
+/* Layout mobile: une seule colonne + header sticky */
+@media (max-width: 780px){
+  #client .sheet header{ position: sticky; top: 0; z-index: 2; }
+  #client .sheet .body{ grid-template-columns: 1fr !important; margin: 10px; padding: 14px; }
+}
+
+/* Petits devices: réductions fines */
+@media (max-width: 420px){
+  #client .sheet header b{ font-size: 24px; }
+  #client .sheet .body .btn{ padding: 12px 16px; font-size: 15px; }
+}
+
 </style>
 </head>
 <body>
@@ -812,6 +939,31 @@ async function shareInvoiceWhatsApp(){
 document.addEventListener('click', (e)=>{
   if(e.target.matches('#btnShareWA')){ shareInvoiceWhatsApp(); }
 });
+</script>
+
+
+<script>
+(function(){
+  const panel = document.getElementById('cartPanel');
+  const btn   = document.getElementById('cartBtn');
+  // Fermer si on clique/touche en dehors du panneau ou du bouton
+  function maybeClose(e){
+    if (!panel || !panel.classList.contains('show')) return;
+    const t = e.target;
+    if (!panel.contains(t) && !btn.contains(t)){
+      panel.classList.remove('show');
+    }
+  }
+  ['pointerdown','click','touchstart'].forEach(evt => {
+    document.addEventListener(evt, maybeClose, { passive: true });
+  });
+  // ESC pour fermer
+  document.addEventListener('keydown', (e)=>{
+    if (e.key === 'Escape' && panel && panel.classList.contains('show')){
+      panel.classList.remove('show');
+    }
+  });
+})();
 </script>
 
 </body>
